name:                tidegal-transport
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/suzumiyasmith/tidegal-transport#readme
license:             BSD3
license-file:        LICENSE
author:              Suzumiya
maintainer:          suzumiyasmith@gmail.com
copyright:           Copyright: (c) 2017 Suzumiya
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Tide.Types
  build-depends:       base >= 4.7 && < 5
                     , linear
                     , binary
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/suzumiyasmith/tidegal-transport
